Several fixes on collection header responsiviness. Prevents title overlapping thumbnail. Prevents description larger than 14 columns. Adjusts breakpoint of maximum container from 1800 to 1526, as this matches the design document.

--- a/src/assets/scss/_gutenberg-support.scss
+++ b/src/assets/scss/_gutenberg-support.scss
@@ -2,11 +2,16 @@
     margin-left: calc(-8.3333333333vw + 15px) !important;
     margin-right: calc(-8.3333333333vw + 15px) !important;
 
-    @media only screen and (min-width: 1800px) {
+    // 1400px is the maximum the inner cointainer should get, so we 
+    // use 1526px - 1 column - 1 column;
+    @media only screen and (min-width: 1526px) {
         margin-left: calc(-1*(87.5vw - 1415px)/2) !important !important;
         margin-right: calc(-1*(87.5vw - 1415px)/2) !important !important;
     }
 }
+
+// 1400px is the maximum the inner cointainer should get, so we 
+// use 1526px - 1 column - 1 column;
 .wp-block-image.alignwide>img {
     max-width: 1400px !important;
     width: calc(100vw - 12.5vw) !important;
@@ -14,7 +19,7 @@
     left: 0px;
     position: relative;
 
-    @media only screen and (min-width: 1800px) {
+    @media only screen and (min-width: 1526px) {
         left: 30px;
     }
 }
